Fix image border on mobile and add minimal Readme
On an iPhone, the filter CSS property would not take the border-radius
into effect, causing a border to appear around the image during the
animation. Now, the clip-path property is used. If that property is not
supported on a web browser, it will default to the same behavior as
before. I also made the image circular by default so, in case clip-path
isn't supported, the image will still be round.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,8 +281,12 @@ input, textarea {
 
 #about img {
   width: 575px;
-  border-radius: 50%;
-  filter: blur(12px);
+  /* Used instead of border-radius because filter doesn't take border-radius into account
+   * on iPhones. If clip-path is unsupported in a browser, the image is still circular but
+   * the same issue will still happen on iPhones.
+   * */
+  clip-path: circle();
+  filter: blur(10px);
 }
 
 #about.animate img {
